--- a/src/components/HomepageReady/styles.module.scss
+++ b/src/components/HomepageReady/styles.module.scss
@@ -34,3 +34,7 @@
   width: 48px;
   color: gray;
 }
+
+.card__body {
+  color: #000000;
+}
